fixed a sizing issue on smaller screens

--- a/src/main/webapp/resources/style.css
+++ b/src/main/webapp/resources/style.css
@@ -2943,151 +2943,17 @@ tbody.collapse.in {
 	margin-left: 5px
 }
 
-.btn-group
->
-.btn
-
-
-:not
-
- 
-
-(
-:first-child
-
- 
-
-)
-:not
-
- 
-
-(
-:last-child
-
- 
-
-)
-:not
-
- 
-
-(
-.dropdown-toggle
-
-
-	
-
-){
-border-radius
-
-
-:
-
- 
-
-0
-}
+.btn-group>.btn:not(:first-child):not(:last-child):not(.dropdown-toggle){border-radius:0}
 .btn-group>.btn:first-child {
 	margin-left: 0
 }
 
-.btn-group
->
-.btn
-
-
-:first-child
-
-
-:not
-
- 
-
-(
-:last-child
-
- 
-
-)
-:not
-
- 
-
-(
-.dropdown-toggle
-
- 
-
-){
-border-bottom-right-radius
-
-
-:
-
- 
-
-0;
-border-top-right-radius
-
-
-:
-
- 
-
-0
-}
-.btn-group
->
-.btn
-
-
-:last-child
-
-
-:not
-
- 
-
-(
-:first-child
-
- 
-
-),
-.btn-group
->
-.dropdown-toggle
-
-
-:not
-
-
-	
-
-(
-:first-child
-
- 
-
-){
-border-bottom-left-radius
-
-
-:
-
- 
-
-0;
-border-top-left-radius
-
-
-:
-
- 
-
-0
-}
+.btn-group>.btn:first-child:not(:last-child):not(.dropdown-toggle)
+{border-bottom-right-radius:0;
+border-top-right-radius:0}
+.btn-group>.btn:last-child:not(:first-child),.btn-group>.dropdown-toggle:not(:first-child){
+border-bottom-left-radius:0;
+border-top-left-radius:0}
 .btn-group>.btn-group {
 	float: left
 }
@@ -3163,158 +3029,19 @@ border-top-left-radius
 	margin-left: 0
 }
 
-.btn-group-vertical
->
-.btn
-
-
-:not
-
- 
-
-(
-:first-child
-
- 
-
-)
-:not
-
- 
-
-(
-:last-child
-
- 
-
-){
-border-radius
-
-
-:
-
- 
-
-0
+.btn-group-vertical>.btn:not(:first-child):not(:last-child){
+border-radius:0
 }
-.btn-group-vertical
->
-.btn
-
-
-:first-child
-
-
-:not
-
- 
-
-(
-:last-child
-
- 
-
-){
-border-top-right-radius
-
-
-:
-
- 
-
-4
-px
-
-
-;
-border-top-left-radius
-
-
-:
-
- 
-
-4
-px
-
-
-;
-border-bottom-right-radius
-
-
-:
-
- 
-
-0;
-border-bottom-left-radius
-
-
-:
-
- 
-
-0
-}
-.btn-group-vertical
->
-.btn
-
-
-:last-child
-
-
-:not
-
- 
-
-(
-:first-child
-
- 
-
-){
-border-top-right-radius
-
-
-:
-
- 
-
-0;
-border-top-left-radius
-
-
-:
-
- 
-
-0;
-border-bottom-right-radius
-
-
-:
-
- 
-
-4
-px
-
-
-;
-border-bottom-left-radius
-
-
-:
-
- 
-
-4
-px
-
-
-
-
+.btn-group-vertical>.btn:first-child:not(:last-child){
+border-top-right-radius:4px;
+border-top-left-radius:4px;
+border-bottom-right-radius:0;
+border-bottom-left-radius:0}
+.btn-group-vertical>.btn:last-child:not(:first-child){
+border-top-right-radius:0;
+border-top-left-radius:0;
+border-bottom-right-radius: 4px;
+border-bottom-left-radius:  4px;
 }
 .btn-group-vertical>.btn-group:not (:first-child ):not (:last-child )>.btn
 	{
